--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="images/web.png" alt="Web Developer">
+          <img class="web" src="images/web.png" alt="Web Developer">
           <h3>Web Development </h3>
-          <p>I'm a Aspiring Full  Stack Web Developer with a good knowlwdge in HTML,CSS,Bootstrap.</p>
+          <p class = "web-skill">I'm a Aspiring Full  Stack Web Developer with a good knowlwdge in HTML,CSS,Bootstrap.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/coder.png" alt="">
+          <img class="coder" src="images/coder.png" alt="">
           <h3>Coding</h3>
-          <p>I'm can code in several languages such as Python , C , C++ , Java , R .</p>
+          <p class =code-skill>I'm can code in several languages such as Python , C , C++ , Java , R .</p>
         </div>
       </div>
       <hr>
