--- a/index.html
+++ b/index.html
@@ -15,38 +15,48 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <h1><em>I'm Akshwin</em></h1>
-    <h2>A Undergrad Student at VIT</h2>
+    <h5>Front End Web Developer and Machine Learning Engineer</h5>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
     <img src="images/mountain.png" alt="mountain">
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/akshwin.png" alt="Profile">
+      <img src="images/personal.jpg" alt="Profile" width ="400",height ="300">
       <h2>Hello.</h2>
-      <p class="intro">I'ma Undergrad Student at Vellore Institute of Technology who is a coder and an upcoming Full Stack WebDeveloper and Full Stack Data Scientist.</p>
+      <p class="intro">I'ma Undergrad Student at Vellore Institute of Technology , Front End Web Developer and Passionate Upcoming Data Scientist  </p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="web" src="images/web.png" alt="Web Developer">
-        <h3>Web Developing </h3>
-        <p class="web-skill">I'm a Aspiring Full Stack Web Developer with a good knowlwdge in HTML,CSS,Bootstrap.</p>
+        <img class="web" src="images/coder.png" alt="Data Science">
+        <h3>Data Science </h3>
+        <p class="web-skill">I'm a Aspiring Data Scientist . I am good in feature Engineering of the data and creating Supervised Machine Learning models</p>
       </div>
-      <br>
+     
+      <hr>
       <div class="skill-row">
-        <img class="coder" src="images/coder.png" alt="">
-        <h3>Coding</h3>
-        <p class=code-skill>I'm can code in several languages such as Python , C , C++ , Java , R .Coding makes me think in different perspective.</p>
+        <img class="coder" src="images/web.png" alt="">
+        <h3>Programming </h3>
+        <p class=code-skill>I'm a good programmer of  Python , C , C++ , Java , R . I love to make machines work for me</p>
       </div>
+
+      <hr>
+
+      <div class="skill-row">
+        <img class="web" src="images/Web-Development.jpg" alt="Web Developer">
+        <h3>Web Development </h3>
+        <p class="web-skill">I'm a Aspiring Full Stack Web Developer with good knowledge in HTML,CSS,Bootstrap,Javascript</p>
+      </div>
+      <hr>
     </div>
-    <hr>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you like to be ahead in life </h3>
-      <p class="contact-message">Contact me to put your ideas into reality.</p>
-      <a class="btn" href="akshwint.2003@gmail.com">CONTACT ME</a>
+      <h3>If you like to colaborate and work in projects , Join our Github Organisation</h3>
+      <p class="contact-message">Turn your ideas into reality.</p>
+      <a class="btn" href="https://github.com/X-Evolve">GITHUB ORGANISATION</a>
     </div>
   </div>
 
