--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="images/personal.jpg" alt="Profile" width ="400",height ="300">
+      <img class = 'personal' src ="images/personal.jpg" alt="Profile" width ="400",height ="300" borderradius = 50%>
       <h2>Hello.</h2>
       <p class="intro">I'ma Undergrad Student at Vellore Institute of Technology , Front End Web Developer and Passionate Upcoming Data Scientist  </p>
     </div>
@@ -61,7 +61,7 @@
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="http://linkedin.com/in/akshwin-t-681395219">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/akshwin/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/akshwin_2003">Twitter</a>
     <a class="footer-link" href="https://github.com/akshwin">Github</a>
     <p class="copyright">© 2022 Akshwin T. @ X-Evolve</p>
